# trilha-python-dio

./: pyproject.toml
Banco de dados Relacionais/: dbapi.py
Banco-de-dados-Relacionais/: dbapi.py  meu_banco.db  pyproject.toml  transacao.py
Desenvolvimento-API-COM-FLASK/instance/: blog.sqlite  dio_banck.sqlite
Desenvolvimento-API-COM-FLASK/src/: app.py  db.py
Desenvolvimento-API-COM-FLASK/src/controllers/: post.py  user.py
Primeiros-passos-com-Flask/: pyproject.toml  tutorial_flask.py
Primeiros-passos-com-Flask/aulas/: return_json.py
Primeiros-passos-com-Flask/src/: app.py
