[tool.poetry]
name = "trilha-python-dio"
version = "0.1.0"
description = ""
authors = ["Gabriel Gama <gafityr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
