[tool.poetry]
name = "primeiros-passos-com-flask"
version = "0.1.0"
description = ""
authors = ["Gabriel Lenovo Ubuntu <gafityr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
